# EmployeeRating-Backend

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: config.py  database.py
app/migrations/: env.py
app/migrations/versions/: 35d1fcd2b874_add_fields.py  40e8447fdd21_initial.py  4a69e325547d_add_fields.py  9979954de6eb_initial.py  a81690dd6c9f_add_fields.py  c9593f31df05_initial.py  ee4bede6d023_initial.py
app/models/: __init__.py  department.py  employee.py
app/routers/: __init__.py  department.py  employee.py
app/schemas/: department.py  employee.py
